# sv-gmmubm

./: .gitignore  CMakeLists.txt  README.md
apps/sv_enroll/: CMakeLists.txt  main.cpp
apps/sv_eval/: CMakeLists.txt  main.cpp
apps/sv_timit_feat_exctract/: CMakeLists.txt  main.cpp
apps/sv_train_ubm/: CMakeLists.txt  main.cpp
libsv/: CMakeLists.txt
libsv/include/sv/gmm/: bw_stats.h  bw_stats_accumulator.h  gmm_model.h  gmm_model_serdes.h  gmm_ubm_trainer.h  map_adaptor.h  scorer.h
libsv/include/sv/io/: feature_serdes.h
libsv/src/gmm/: bw_stats_accumulator.cpp  gmm_model_serdes.cpp  gmm_ubm_trainer.cpp  map_adaptor.cpp  scorer.cpp
libsv/src/io/: feature_serdes.cpp
scripts/: data_init.sh  prepare_timit.sh  setup.sh
scripts/inspect_lvf/: inspect_lvf.py
